fix: toggled button text no readable on dark theme

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -67,7 +67,7 @@ button {
     cursor: pointer;
 }
 button.toggled {
-    background-color: #79b;
+    opacity: .6;
 }
 
 .error-msg {
